src/test/ui/error-codes/E0779.rs
#![feature(isa_attribute)]

#[instruction_set(arm::magic)] //~ ERROR
fn main() {

}
